--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -1,36 +1,27 @@
 name: Maven Publish
 
 on:
-  release:
-    types: [created]
+  push:
+    branches:
+      - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Setup Java
+        uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribution: 'temurin'
-          server-id: github
-          settings-path: ${{ github.workspace }}
 
-      - name: Configure Maven Settings
-        uses: s4u/maven-settings-action@v2
-        with:
-          servers: |
-            [{
-              "id": "github",
-              "username": "${{ github.actor }}",
-              "password": "${{ secrets.MVN_TOKEN }}"
-            }]
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
       - name: Publish to GitHub Packages
-        run: mvn deploy
         env:
           GITHUB_TOKEN: ${{ secrets.MVN_TOKEN }}
+        run: mvn deploy --settings settings.xml
