Debug for Maven Deploy

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -35,4 +35,4 @@ jobs:
       - name: Publish to GitHub Packages
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
-        run: mvn deploy
+        run: mvn deploy -X
