--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -60,3 +60,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.PUBLISH_TOKEN }}
         run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+
+      # Yeni Release Oluşturma
+      - name: Create Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: v${{ env.VERSION }}
+          name: v${{ env.VERSION }} - Yeni Sürüm 🚀
+          body: |
+            Bu sürüm, önemli güncellemeler ve geliştirmeler içeriyor.
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # JitPack İçin Bildirim Gönderme
+      - name: Trigger JitPack Build
+        run: |
+          curl -X POST https://jitpack.io/com/github/hidirektor/version-util/${{ env.VERSION }}
