--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -23,21 +23,6 @@ jobs:
           server-id: github
           settings-path: ${{ github.workspace }}
 
-      - name: Install Maven 3.8.8
-        run: |
-          sudo rm -f /usr/bin/mvn
-          sudo rm -rf /opt/maven
-          sudo apt-get remove -y maven
-
-          sudo apt-get update
-          sudo apt-get install -y wget
-          wget https://archive.apache.org/dist/maven/maven-3/3.8.8/binaries/apache-maven-3.8.8-bin.tar.gz
-          tar -xvzf apache-maven-3.8.8-bin.tar.gz
-          sudo mv apache-maven-3.8.8 /opt/maven
-          sudo ln -s /opt/maven/bin/mvn /usr/bin/mvn
-          mvn -version
-
-
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
@@ -69,7 +54,7 @@ jobs:
           fi
 
       - name: Build with Maven
-        run: mvn -B clean install --file pom.xml
+        run: mvn -B package --file pom.xml
 
       - name: Publish to GitHub Packages
         env:
