--- a/pom.xml
+++ b/pom.xml
@@ -72,4 +72,12 @@
             </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/hidirektor/version-util</url>
+        </repository>
+    </distributionManagement>
 </project>
